--- a/source/package.json
+++ b/source/package.json
@@ -22,7 +22,9 @@
         "postcss": "^8.1.14",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-flash-message": "^1.0.7",
         "react-router-dom": "^5.2.0",
+        "react-scroll-to-bottom": "^4.1.2",
         "redis": "^3.1.2",
         "resolve-url-loader": "^3.1.3",
         "sass": "^1.32.11",
