--- a/source/package.json
+++ b/source/package.json
@@ -25,12 +25,13 @@
         "react-flash-message": "^1.0.7",
         "react-router-dom": "^5.2.0",
         "react-scroll-to-bottom": "^4.1.2",
+        "react-toastify": "^7.0.4",
         "redis": "^3.1.2",
         "resolve-url-loader": "^3.1.3",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "socket.io": "^4.1.2",
-        "socket.io-client": "^4.1.2"
+        "socket.io": "^2.4.1",
+        "socket.io-client": "^2.4.0"
     },
     "dependencies": {
         "scroll-to-bottom": "^1.0.1"
